// Licensed to Elasticsearch B.V. under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Elasticsearch B.V. licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package elastic.apm.v1;

option go_package = "github.com/elastic/apm-data/model/modelpb";

message Service {
  ServiceOrigin origin = 1;
  ServiceTarget target = 2;
  Language language = 3;
  Runtime runtime = 4;
  Framework framework = 5;
  string name = 6;
  string version = 7;
  string environment = 8;
  ServiceNode node = 9;
}

message ServiceOrigin {
  string id = 1;
  string name = 2;
  string version = 3;
}

message ServiceTarget {
  string name = 1;
  string type = 2;
}

message Language {
  string name = 1;
  string version = 2;
}

message Runtime {
  string name = 1;
  string version = 2;
}

message Framework {
  string name = 1;
  string version = 2;
}

message ServiceNode {
  string name = 1;
}
